<resources>
    <string name="app_name">LojaOnlineAppMaster</string>

    <string name="Abrir">Abrir</string>
    <string name="Fechar">Fechar</string>
    <string name="logout">Sair</string>
    <string name="home">Home</string>
    <string name="profile">Perfil</string>
    <string name="favorites">Favoritos</string>
    <string name="cart">Carrinho</string>
    <string name="my_orders">Meus Pedidos</string>

    <string-array name="produtosTipos">
        <item>Frutas</item>
        <item>Vegetais</item>
        <item>Carnes</item>
        <item>Eletronicos</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_oferta">AdminOfertaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_editar_oferta">EditarOfertaActivity</string>


    <!--    <string name="Gmail_web_client_id">467496904796-qnkcblf9s7tia25bmrgp50ed9a0uqfnf.apps.googleusercontent.com</string>-->
    <!--    <string name="title_activity_esqueceu_senha">EsqueceuSenhaActivity</string>-->
    <!--    <string name="prompt_email">Email</string>-->
    <!--    <string name="prompt_password">Password</string>-->
    <!--    <string name="action_sign_in">Sign in or register</string>-->
    <!--    <string name="action_sign_in_short">Sign in</string>-->
    <!--    <string name="welcome">"Welcome !"</string>-->
    <!--    <string name="invalid_username">Not a valid username</string>-->
    <!--    <string name="invalid_password">Password must be >5 characters</string>-->
    <!--    <string name="login_failed">"Login failed"</string>-->
</resources>