<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/Home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/Perfil"
            android:icon="@drawable/profile_icon"
            android:title="@string/profile" />
        <item
            android:id="@+id/Favoritos"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favorites" />
        <item
            android:id="@+id/Carrinho"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/cart" />
        <item
            android:id="@+id/MeusPedidos"
            android:icon="@drawable/ic_baseline_my_orders_24"
            android:title="@string/my_orders" />

    </group>
    <item android:title="Categorias">
        <menu>
            <item
                android:id="@+id/Frutas"
                android:title="Frutas" />
            <item
                android:id="@+id/Vegetais"
                android:title="Vegetais" />

            <item
                android:id="@+id/Carnes"
                android:title="Carnes" />
            <item
                android:id="@+id/Eletronicos"
                android:title="Eletrônicos" />
        </menu>
    </item>
    <item android:title="@string/logout">
        <menu>
            <item
                android:id="@+id/Sair"
                android:icon="@drawable/ic_baseline_exit_to_app_24"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>